@@ -1,0 +1,3 @@
+Require that doubles obey strictly-correct IEEE 64-bit floating point.
+
+This eliminates use of x86 FPU, hence only SSE2 allowed.
