@@ -1,166 +1,0 @@
-## THIS IS THE VERSION FOR 32-BIT BUILDS ON A 32-BIT WINDOWS SYSTEM, USING SSE2.
-##
-## This version should work on any procesors from the Pentium 4 on, but
-## not on processors without SSE2 support (eg, Pentium III).
-##
-## To use, copy to MkRules.local, and then edit options below if desired.
-##
-## Use MkRules.dist32 or MkRules.dist64 as a starting point if you are building
-## for a 32-bit system without SSE2 instructions or for a 64-bit system.
-## But note that if used with pqR-win-extras-32, MkRules.dist32-sse2 can be used
-## on 64-bit system (though it's likely not as fast as a 64-bit build).
-
-
-## This is only used when building R itself but it does customize
-## etc/*/Makeconf using LOCAL_SOFT, BINPREF[64], IMPLIB and R_ARCH
-
-## =========== configuration macros for building packages ================
-# Absolute path to '/usr/local' software collection.  The versions used
-# on CRAN can be found under http://www.stats.ox.ac.uk/pub/Rtools/goodies
-LOCAL_SOFT =
-
-## ============== configuration macros for building R ===================
-
-# Define DEBUG to save debug info.  Leave undefined to save the space.
-
-DEBUG=T
-
-# Debug info compiler flag.  An alternative is to use -gstabs here, if the 
-# debugger supports only stabs.
-G_FLAG=-gdwarf-2
-
-# Comment out if the msvcrt.dll malloc/free is required (not tested recently)
-LEA_MALLOC=YES
-
-# Set to YES and specify the path if you want to use the ATLAS BLAS.
-USE_ATLAS=NO
-ATLAS_PATH=/R/ATLAS/lib/WinNT_P4SSE2
-
-# Support for the ACML and Goto BLASes has been withdrawn: see R-admin.html
-
-# Set this to 32 or 64, or leave blank if using some other toolchain.
-
-MULTI = 32
-
-# If the toolchain's bin directory is not in your path, set this to the path
-# (including the trailing /, and use / not \).
-TOOL_PATH =
-
-# Compilers use a -m64 or -m32 option to select architectures.  Including
-# -msse2 and -mfpmath=sse as well will ensure reproducibility of floating-point
-# operations, but this assumes a Pentium 4 or later machine.  SSE2 instructions
-# require 16-byte stack alignment, which appears to not be ensured by setup code
-# for Windows, so the -mstackrealign option is specified to force C procedures
-# to ensure this alignment.
-
-M_ARCH = -m32 -msse2 -mfpmath=sse -mstackrealign
-
-# Optimization levels for most C and Fortran compiles.  A high level is
-# not necessarily better than a lower level, both because it may actually
-# give slower code, and because it may activate compiler bugs.  The Windows
-# front-ends might be compiled with lower optimization level to avoid 
-# possible bugs, since this is probably not time-critical code.
-
-C_OPT_LEVEL = -O2
-F_OPT_LEVEL = -O2
-
-C_OPT_LEVEL_FRONT_ENDS = -O1
-
-# Additional optimization flags used sometimes.
-
-EOPTS = 
-
-
-# For other toolchains, set the options below.
-
-# Some of the toolchains have prefixes for e.g. ar, gcc.
-# This can also be used to give the full path to the compiler, 
-# including a trailing / .
-
-# prefix for 32-bit: path or i686-w64-mingw32-
-BINPREF =
-# prefix for 64-bit: path or x86_64-w64-mingw32-
-BINPREF64 = x86_64-w64-mingw32-
-
-# and for as (--32 or --64)
-AS_ARCH = --32
-
-# and for windres (-F pe-i386 or pe-x86-64)
-RC_ARCH = -F pe-i386
-
-# and for dlltool ("-m i386 --as-flags --32" vs "-m i386:x86-64 --as-flags --64")
-DT_ARCH = -m i386 --as-flags --32
-
-# 32- or 64-bit Windows?
-WIN = 32
-
-# We normally link directly against DLLs, 
-# but this macro forces the use of import libs
-# Has been needed for some versions of MinGW-w64
-# USE_IMPLIBS = YES
-
-### END options for other toolchains
-
-
-# set to use ICU (experimental)
-# USE_ICU=YES
-# path to parent of ICU headers
-ICU_PATH=/sources/icu
-
-# optional overrides for making bitmapdll: names of source directories
-# JPEGDIR = jpeg-8c
-# PNGDIR = libpng
-# TIFFDIR = libtiff
-
-# For the cairographics devices
-# Optionally use a static build of cairographics from
-#   http://www.rforge.net/Cairo/files/cairo-current-win.tar.gz
-# which are also in the src/gnuwin32/cairo directory, and set
-# set CAIRO_HOME to the parent of the win32/win64 directories
-#
-# If CAIRO_HOME is not set the devices are not built.
-CAIRO_HOME = ../../../../gnuwin32/cairo/src  # relative to grDevices/src/cairo
-
-# set this to YES to build static HTML help
-BUILD_HTML = NO
-
-# unset this if you are *not* using MiKTeX
-MIKTEX = TRUE
-
-# additional flags regarding warnings
-EWARN = -Wno-unused-value -Wno-parentheses
-
-# define to -fopenmp if the toolchain has OpenMP support
-OPENMP = -fopenmp
-
-# define to -pthread if the toolchain has pthreads support
-PTHREAD = -pthread
-
-## ====== configuration macros for building installer ===========
-
-# location where Inno Setup 5.[34].x was installed. Spaces allowed.
-ISDIR=C:/packages/Inno
-
-# optional location where qpdf was installed (in $(QPDF)/bin). Spaces allowed.
-QPDF=
-
-# home of 32-bit files for combined installer on 64-bit build
-HOME32=
-
-# Full paths of extra DLLs that need to be shipped
-# e.g
-# DLLs32 = c:/R/bin/pthreadGC2-w32.dll
-# DLLs64 = c:/R/bin64/pthreadGC2-w64.dll
-DLLs32 =
-DLLs64 =
-
-## ====== configuration macros for building MSI installer ===========
-
-# location where WiX 3.x executables were installed. Spaces allowed.
-# The MSI uses '/bin': other packagings may not
-WIX3DIR=C:/packages/WiX3.5/bin
-
-# set to 1 for a non-elevated per-user installer
-WIX_PERSONAL=0
-
-## =============== end of user-customizable parts  ===================
